Don't allow removal of "default" displays
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4552 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/visualization/ogre_visualizer/CMakeLists.txt
+++ b/visualization/ogre_visualizer/CMakeLists.txt
@@ -41,6 +41,7 @@ add_custom_command(OUTPUT   ${SWIG_OUTPUT_CPP_FILE}
                             src/ogre_visualizer/visualizers/point_cloud_visualizer.i
                             src/ogre_visualizer/visualizers/robot_model_visualizer.i
                             src/ogre_visualizer/visualization_panel.h 
+                            src/ogre_visualizer/generated/visualization_panel_generated.h
                             src/ogre_visualizer/visualizer_base.h
                             src/ogre_visualizer/visualizers/grid_visualizer.h)
 
