added F3D force feedback groundtruth plugin for fingers. update P3D to broadcast velocity as well, using new TransformWithRateStamped.msg.
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4557 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/robot_descriptions/gazebo_robot_description/CMakeLists.txt
+++ b/robot_descriptions/gazebo_robot_description/CMakeLists.txt
@@ -21,12 +21,12 @@ add_custom_target(pr2_gazebo_model ALL
 add_custom_target(pr2_gazebo_model_headless ALL
 		  COMMAND ${urdf2gazebo_exe} ${wg_robot_description_PACKAGE_PATH}/pr2/gazebo/pr2_gazebo_actuators_headless.xml ${gazebo_robot_description_PACKAGE_PATH}/world/pr2_xml_headless.model
 		  DEPENDS urdf2gazebo
-		  COMMENT "Building Gazebo model for PR2 Test Actuators")
+		  COMMENT "Building Gazebo model for PR2 Gazebo Actuators")
 
 add_custom_target(pr2_gazebo_model_nolimit ALL
 		  COMMAND ${urdf2gazebo_exe} ${wg_robot_description_PACKAGE_PATH}/pr2/gazebo/pr2_gazebo_actuators.xml ${gazebo_robot_description_PACKAGE_PATH}/world/pr2_xml_nolimit.model 1
 		  DEPENDS urdf2gazebo
-		  COMMENT "Building Gazebo model for PR2 Test Actuators with no limits")
+		  COMMENT "Building Gazebo model for PR2 Gazebo Actuators with no limits")
 
 #pr2_arm
 add_custom_target(pr2d2 ALL
