updated single link test case.
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4623 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/robot_descriptions/gazebo_robot_description/CMakeLists.txt
+++ b/robot_descriptions/gazebo_robot_description/CMakeLists.txt
@@ -43,12 +43,12 @@ add_custom_target(pr2_gazebo_model_arm ALL
 add_custom_target(pr2_gazebo_model_arm_headless ALL
 		  COMMAND ${urdf2gazebo_exe} ${wg_robot_description_PACKAGE_PATH}/pr2_arm_test/gazebo/pr2_arm_gazebo_actuators_headless.xml ${gazebo_robot_description_PACKAGE_PATH}/world/pr2_xml_arm_headless.model
 		  DEPENDS urdf2gazebo
-		  COMMENT "Building Gazebo model for PR2 Arm Test")
+		  COMMENT "Building Gazebo model for PR2 Arm Test Headless")
 
 # single_link_test
 add_custom_target(pr2_gazebo_model_single_link ALL
-		  COMMAND ${urdf2gazebo_exe} ${wg_robot_description_PACKAGE_PATH}/single_link_test/pr2_single_link.xml ${gazebo_robot_description_PACKAGE_PATH}/world/pr2_xml_single_link.model
+		  COMMAND ${urdf2gazebo_exe} ${wg_robot_description_PACKAGE_PATH}/single_link_test/gazebo/pr2_single_link_gazebo_actuators.xml ${gazebo_robot_description_PACKAGE_PATH}/world/pr2_xml_single_link.model
 		  DEPENDS urdf2gazebo
-		  COMMENT "Building Gazebo model for PR2 Arm Test")
+		  COMMENT "Building Gazebo model for Single Link Test")
 
 
