--- a/controllers/pr2_mechanism_controllers/CMakeLists.txt
+++ b/controllers/pr2_mechanism_controllers/CMakeLists.txt
@@ -13,3 +13,6 @@ rospack_add_library( pr2_mechanism_controllers
 
 rospack_add_executable(testBaseController test/test_base_controller.cpp)
 target_link_libraries(testBaseController pr2_mechanism_controllers)
+
+rospack_add_executable(testRunBaseController test/test_run_base_controller.cpp)
+target_link_libraries(testRunBaseController pr2_mechanism_controllers)
