Baseline with Eitans controller
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4693 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/highlevel/highlevel_controllers/CMakeLists.txt
+++ b/highlevel/highlevel_controllers/CMakeLists.txt
@@ -1,14 +1,16 @@
 cmake_minimum_required(VERSION 2.6)
 include(rosbuild)
 add_definitions(-Wall)
-
 rospack(highlevel_controllers)
+
+# Library
+link_directories(/wg/stor1/mcgann/pr/trajectory_rollout/lib)
+rospack_add_library(highlevel_controllers src/MoveBase.cpp)
+target_link_libraries(highlevel_controllers trajectory_rollout costmap_2d)
 
 # MoveArm
 rospack_add_executable(move_arm src/MoveArm.cpp)
 
 # MoveBase
-rospack_add_library(highlevel_controllers src/MoveBase.cpp)
 rospack_add_executable(move_base_sbpl src/move_base_sbpl.cpp)
 target_link_libraries(move_base_sbpl highlevel_controllers)
-target_link_libraries(highlevel_controllers costmap_2d)
