Switch from size_t
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4704 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/world_models/costmap_2d/CMakeLists.txt
+++ b/world_models/costmap_2d/CMakeLists.txt
@@ -1,8 +1,9 @@
 cmake_minimum_required(VERSION 2.6)
 include(rosbuild)
 rospack(costmap_2d)
-include_directories(${PROJECT_SOURCE_DIR}/	include)
 rospack_add_library(costmap_2d src/costmap_2d.cpp)
+
+# Not implementing the node for now
 #rospack_add_executable(bin/costmap_2d_ros src/costmap_2d_ros.cpp)
 #target_link_libraries(bin/costmap_2d_ros costmap_2d)
 
