Adding inverse dynamics controller (untested, don't use yet)
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4741 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/controllers/pr2_mechanism_controllers/CMakeLists.txt
+++ b/controllers/pr2_mechanism_controllers/CMakeLists.txt
@@ -9,10 +9,14 @@ rospack_add_library( pr2_mechanism_controllers
   src/base_controller.cpp
   src/laser_scanner_controller.cpp
   src/arm_position_controller.cpp
-  src/arm_velocity_controller.cpp)
+  src/arm_velocity_controller.cpp
+  src/arm_dynamics_controller.cpp)
 
 rospack_add_executable(testBaseController test/test_base_controller.cpp)
 target_link_libraries(testBaseController pr2_mechanism_controllers)
 
 rospack_add_executable(testRunBaseController test/test_run_base_controller.cpp)
+target_link_libraries(testRunBaseController pr2_mechanism_controllers)
+
+rospack_add_executable(testArmDynamicsController test/test_arm_dynamics_controller.cpp)
 target_link_libraries(testRunBaseController pr2_mechanism_controllers)
