--- a/3rdparty/wxswig/Makefile
+++ b/3rdparty/wxswig/Makefile
@@ -3,9 +3,12 @@ all: wxswig
 VERSION = SWIG-1.3.29-wx
 WXSWIG_ROOT = $(shell rospack find wxswig)
 
+$(VERSION)/configure:
+	cd $(VERSION) && \
+	./autogen.sh
+
 $(VERSION)/Makefile: $(VERSION)/Makefile.in $(VERSION)/configure $(VERSION)/configure.in
 	cd $(VERSION) && \
-		./autogen.sh && \
 		./configure --prefix=$(WXSWIG_ROOT)
 
 $(VERSION): $(VERSION)/Makefile
