Added stub arm end effector control code, and arm.2 demo
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4777 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/highlevel/executive_trex/executive_trex_pr2/cfg/pr2.cfg
+++ b/highlevel/executive_trex/executive_trex_pr2/cfg/pr2.cfg
@@ -31,6 +31,20 @@
 		<Param nddl="gripper_roll" ros="gripper_roll_right_joint"/>
 	</TeleoReactor>
 
+ 	<TeleoReactor name="rightEndEffectorControllerAdapter" component="EndEffectorControllerAdapter" timelineName="moveRightEndEffector" timelineType="MoveEndEffector" stateTopic="right_end_effector_state" goalTopic="right_end_effector_goal">
+		<Timeline name="moveRightEndEffector"/>
+		<Param nddl="shoulder_pan" ros="shoulder_pan_right_joint"/>
+		<Param nddl="shoulder_pitch" ros="shoulder_pitch_right_joint"/>
+		<Param nddl="upperarm_roll" ros="upper_arm_right_joint"/>
+		<Param nddl="elbow_flex" ros="elbow_flex_right_joint"/>
+		<Param nddl="forearm_roll" ros="forearm_roll_right_joint"/>
+		<Param nddl="wrist_flex" ros="wrist_flex_right_joint"/>
+		<Param nddl="gripper_roll" ros="gripper_roll_right_joint"/>
+	</TeleoReactor>
+
+
+
+
  	<TeleoReactor name="leftArmStateAdapter" component="ArmStateAdapter" timelineName="leftArmState" timelineType="ArmState" stateTopic="mechanism_state">
 		<Timeline name="leftArmState"/>
 		<Param nddl="shoulder_pan" ros="shoulder_pan_left_joint"/>
@@ -52,5 +66,8 @@
 		<Param nddl="wrist_flex" ros="wrist_flex_left_joint"/>
 		<Param nddl="gripper_roll" ros="gripper_roll_left_joint"/>
 	</TeleoReactor>
+
+
+
 
 </Agent>
