remove configure when cleaning
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4778 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/3rdparty/wxswig/Makefile
+++ b/3rdparty/wxswig/Makefile
@@ -21,7 +21,8 @@ wxswig: $(VERSION)
 clean:
 	cd $(VERSION) && \
 		make clean && \
-		rm -f Makefile
+		rm -f Makefile && \
+		rm -f configure
 	rm -rf bin
 	rm -rf share
 
