Make the robot model and planning visualizers have user-configurable robot description param/topics
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4783 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/visualization/ogre_visualizer/CMakeLists.txt
+++ b/visualization/ogre_visualizer/CMakeLists.txt
@@ -43,7 +43,14 @@ add_custom_command(OUTPUT   ${SWIG_OUTPUT_CPP_FILE}
                             src/ogre_visualizer/visualization_panel.h 
                             src/ogre_visualizer/generated/visualization_panel_generated.h
                             src/ogre_visualizer/visualizer_base.h
-                            src/ogre_visualizer/visualizers/grid_visualizer.h)
+                            src/ogre_visualizer/visualizers/axes_visualizer.h
+                            src/ogre_visualizer/visualizers/grid_visualizer.h
+                            src/ogre_visualizer/visualizers/laser_scan_visualizer.h
+                            src/ogre_visualizer/visualizers/marker_visualizer.h
+                            src/ogre_visualizer/visualizers/octree_visualizer.h
+                            src/ogre_visualizer/visualizers/planning_visualizer.h
+                            src/ogre_visualizer/visualizers/point_cloud_visualizer.h
+                            src/ogre_visualizer/visualizers/robot_model_visualizer.h)
 
 rospack_add_library(${PROJECT_NAME} src/ogre_visualizer/visualization_panel.cpp
 				   												 src/ogre_visualizer/visualizer_base.cpp
