update ode with local patch.
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4807 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/3rdparty/opende/Makefile
+++ b/3rdparty/opende/Makefile
@@ -4,6 +4,8 @@ WITH_DRAWSTUFF = yes
 CFG_OPTIONS = --with-arch=nocona --enable-release --disable-asserts --with-pic --enable-double-precision
 SVN_REVISION = -r 1550
 
+SVN_PATCH = opende_patch.diff
+
 ifeq ($(WITH_DRAWSTUFF), yes)
 CFG_OPTIONS += --with-drawstuff=X11
 endif
@@ -15,14 +17,16 @@ SVN_URL = https://opende.svn.sourceforge.net/svnroot/opende/trunk
 include $(shell rospack find mk)/svn_checkout.mk
 
 CONFIGURE_FLAGS = $(CFG_OPTIONS) CXXFLAGS='-ggdb -fPIC -I$(ROOT)/include' LDFLAGS='-L$(ROOT)/lib' CFLAGS='-ggdb -fPIC -I$(ROOT)/include -I$(ROOT)/usr/include'
+#CONFIGURE_FLAGS = $(CFG_OPTIONS) CC='/opt/intel/cc/10.1.008/bin/icc' CXX='/opt/intel/cc/10.1.008/bin/icpc' LD='/opt/intel/cc/10.1.008/bin/xild' CXXFLAGS='-march=core2 -xT -parallel -O3 -fPIC -I$(ROOT)/include' LDFLAGS='-L$(ROOT)/lib' CFLAGS='-march=core2 -xT -parallel -O3 -fPIC -I$(ROOT)/include -I$(ROOT)/usr/include' LDFLAGS='-Wl,-rpath,/opt/intel/cc/10.1.008/lib -L/opt/intel/cc/10.1.008/lib -lguide -lcxaguard -limf -lsvml -lirc -pthread'
+#CONFIGURE_FLAGS = $(CFG_OPTIONS) CC='/opt/intel/cc/10.1.008/bin/icc' CXX='/opt/intel/cc/10.1.008/bin/icpc' LD='/opt/intel/cc/10.1.008/bin/xild' CXXFLAGS='-march=core2 -xT -msse3 -openmp -parallel -O3 -fPIC -I$(ROOT)/include' LDFLAGS='-L$(ROOT)/lib' CFLAGS='-march=core2 -xT -msse3 -openmp -parallel -O3 -fPIC -I$(ROOT)/include -I$(ROOT)/usr/include' LDFLAGS='-Wl,-rpath,/opt/intel/cc/10.1.008/lib -L/opt/intel/cc/10.1.008/lib -lomp_db -lguide -lcxaguard -limf -lsvml -lompstub -lirc -liomp5 -lintlc -pthread'
 
 ROOT = $(shell rospack find opende)/opende
 
-build: SVN_UP opende
+build: SVN_UP_REVERT_PATCH opende
 
 configured: $(SVN_DIR) Makefile
 	cd $(SVN_DIR) && sh ./autogen.sh
-	cd $(SVN_DIR) && ./configure --prefix=$(ROOT) --with-trimesh=opcode --enable-shared $(CONFIGURE_FLAGS)
+	cd $(SVN_DIR) && ./configure --prefix=$(ROOT) --with-trimesh=opcode --enable-new-trimesh --enable-shared $(CONFIGURE_FLAGS)
 	touch configured
 
 .PHONY: opende
@@ -31,8 +35,10 @@ opende: configured
 	cd $(SVN_DIR) && make install
 	@echo "patch ode-config to pass -Wl,-rpath,-L{exec_prefix}/lib"
 	sed 's/echo  -L$${exec_prefix}\/lib -lode/echo  -Wl,-rpath,$${exec_prefix}\/lib -L$${exec_prefix}\/lib -lode/g' opende-svn/ode-config > opende/bin/ode-config
+	#sed 's/echo  -L$${exec_prefix}\/lib -lode/echo  -Wl,-rpath,$${exec_prefix}\/lib -L$${exec_prefix}\/lib -lode -Wl,-rpath,\/opt\/intel\/cc\/10.1.008\/lib -L\/opt\/intel\/cc\/10.1.008\/lib -lguide -lcxaguard -limf -lsvml -lirc -pthread/g' opende-svn/ode-config > opende/bin/ode-config
 	@echo "patch ode.pc to pass -Wl,-rpath,-L{libdir}"
 	sed 's/Libs: -L$${libdir} -lode/Libs: -Wl,-rpath,$${libdir} -L$${libdir} -lode/g' opende-svn/ode.pc > opende/lib/pkgconfig/ode.pc
+	#sed 's/Libs: -L$${libdir} -lode/Libs: -Wl,-rpath,$${libdir} -L$${libdir} -lode -Wl,-rpath,\/opt\/intel\/cc\/10.1.008\/lib -L\/opt\/intel\/cc\/10.1.008\/lib -lguide -lcxaguard -limf -lsvml -lirc -pthread/g' opende-svn/ode.pc > opende/lib/pkgconfig/ode.pc
 
 clean:
 	-cd $(SVN_DIR) && make clean
