Cleaned up spacenav
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4860 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/3rdparty/spacenav/Makefile
+++ b/3rdparty/spacenav/Makefile
@@ -23,9 +23,9 @@ libspnav_configured: spacenav_svn
 	touch $@
 
 clean:
-	$(RM) -r libspnav spacenavd libspnav_configured spacenavd_configured
-	make -C $(SVN_DIR)/spacenavd clean
-	make -C $(SVN_DIR)/libspnav
+	-make -C $(SVN_DIR)/spacenavd clean
+	-make -C $(SVN_DIR)/libspnav clean
+	-$(RM) -r libspnav spacenavd libspnav_configured spacenavd_configured
 
 wipe: clean
-	rm -rf $(SVN_DIR)
+	-rm -rf $(SVN_DIR)
