--- a/drivers/robot/pr2/pr2_power_board/Makefile
+++ b/drivers/robot/pr2/pr2_power_board/Makefile
@@ -1,13 +1,14 @@
+include $(shell rospack find mk)/cmake.mk
 
 #CFLAGS=-fPIC -ggdb -Wall 
-CCFLAGS=-fPIC -ggdb -Wall 
-CPPFLAGS=-fPIC -ggdb -Wall 
-LIBS=#-lreadline
+#CCFLAGS=-fPIC -ggdb -Wall 
+#CPPFLAGS=-fPIC -ggdb -Wall 
+#LIBS=#-lreadline
 
-all: power
+#all: power
 
-power: power.o power_comm.h	
-	g++ $(CCFLAGS) $(LINKINCLUDES) $(LIBS) -o $@ $^ 
+#power: power.o power_comm.h	
+#	g++ $(CCFLAGS) $(LINKINCLUDES) $(LIBS) -o $@ $^ 
 
-clean:
-	rm *.o power
+#clean:
+#	rm *.o power
