--- a/drivers/cam/flea2/test/view/Makefile
+++ b/drivers/cam/flea2/test/view/Makefile
@@ -1,6 +1,6 @@
 SRC = view.cpp
 OUT = view
 PKG = flea2
-CFLAGS = -I../../include
-LFLAGS = -ldc1394_control -lraw1394
+CFLAGS = -I../../include `sdl-config --cflags`
+LFLAGS = -ldc1394_control -lraw1394 `sdl-config --libs`
 include $(shell rospack find mk)/node.mk
