--- a/util/sdlgl/src/Makefile
+++ b/util/sdlgl/src/Makefile
@@ -1,5 +1,7 @@
 SRC = sdlgl.cpp
 OUT = ../lib/libsdlgl.a 
 PKG = sdlgl
+CFLAGS = `sdl-config --cflags`
+LFLAGS = `sdl-config --libs`
 include $(shell rospack find mk)/lib.mk
 
