--- a/simulators/gazebo_map_extruder/CMakeLists.txt
+++ b/simulators/gazebo_map_extruder/CMakeLists.txt
@@ -2,3 +2,4 @@ cmake_minimum_required(VERSION 2.6)
 include(rosbuild)
 rospack(gazebo_map_extruder)
 rospack_add_executable(gazebo_map_extruder gazebo_map_extruder.cc)
+target_link_libraries(gazebo_map_extruder SDL_image)
