--- a/world_models/costmap_2d/CMakeLists.txt
+++ b/world_models/costmap_2d/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.6)
 include(rosbuild)
 rospack(costmap_2d)
-rospack_add_library(costmap_2d src/costmap_2d.cpp)
+rospack_add_library(costmap_2d src/costmap_2d.cpp src/obstacle_map_accessor.cc)
 
 # Not implementing the node for now
 #rospack_add_executable(bin/costmap_2d_ros src/costmap_2d_ros.cpp)
