executing sender->broadcaster filename change
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@5006 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/util/tf/CMakeLists.txt
+++ b/util/tf/CMakeLists.txt
@@ -30,5 +30,5 @@ rospack_add_executable(btTest test/quaternion.cpp)
 rospack_add_executable(testClient test/testClient.cpp)
 target_link_libraries(testClient tf)
                                  
-rospack_add_executable(testSender test/testSender.cpp)
-target_link_libraries(testSender tf)
+rospack_add_executable(testBroadcaster test/testBroadcaster.cpp)
+target_link_libraries(testBroadcaster tf)
